--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -83,7 +83,7 @@
           </li>
         </ul>
         <div class="dope-buttons dope-buttons-r">
-          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}" title="Share on Twitter">
+          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_title }}&url={{ podcast.get_absolute_url }}" title="Share on Twitter">
             <span class="active">
               Tweet
             </span>
