--- a/podcasts/templates/episodes-table.html
+++ b/podcasts/templates/episodes-table.html
@@ -88,14 +88,14 @@
                     </button>
                   </form>
                   {% endif %}
-                  <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_description }}&url={{ episode.podcast }}?episode={{ episode.signature }}" title="Share on Twitter">
+                  <!--<a class="btn-dope" href="//twitter.com/intent/tweet?text=tweet-text&url=tweet-url?episode={{ episode.signature }}" title="Share on Twitter">
                     <span class="active">
                       Tweet
                     </span>
                     <span>
                       <i class="fab fa-twitter"></i>
                     </span>
-                  </a>                              
+                  </a>-->                          
                   <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
                     {% csrf_token %}
                     <input type="hidden" name="mode" value="play" />
