--- a/index/static/style.css
+++ b/index/static/style.css
@@ -131,6 +131,8 @@ form {
 }
 
 .dope-field {
+  color: #2e2e2e;
+  background: #fff;
   font-size: 14px;
   margin-bottom: 10px;
   width: 100%;
@@ -294,6 +296,7 @@ form {
   padding: 0 10px;
 }
 .search-button {
+  color: #2e2e2e;
   padding: 0 4px;
   font-size: 14px;
   cursor: pointer;
@@ -1062,7 +1065,7 @@ form {
   }
   .reload-button {
     left: calc(50% - 42px);
-  }  
+  }
 }
 /* Extra small devices (phones, up to 480px) */
 @media screen and (max-width: 767px) {
@@ -1112,6 +1115,9 @@ form {
   }    
   #player-wrapper {
     border-radius: 0;
+  }
+  .dope-wrapper {
+    max-width: 100%;
   }
 }
 /* Small devices (tablets, 768px and up) */
