add more social media buttons

--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -130,6 +130,24 @@
             No description
           {% endif %}
         </p>
+        <div class="dope-buttons dope-buttons-r">
+          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.object.url_format_title }}&url={{ podcast.object.get_absolute_url }}" title="Share on Twitter">
+            <span class="active">
+              Tweet
+            </span>
+            <span>
+              <i class="fab fa-twitter"></i>
+            </span>
+          </a>
+          <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.object.get_absolute_url }}" title="Share on Facebook">
+            <span class="active">
+              Share
+            </span>
+            <span>
+              <i class="fab fa-facebook-f"></i>
+            </span>
+          </a>
+        </div>        
       </div>
     </div>
   {% endfor %}
