--- a/podcasts/templates/playlist.html
+++ b/podcasts/templates/playlist.html
@@ -208,6 +208,24 @@
               No description
             {% endif %}
           </p>
+          <div class="dope-buttons dope-buttons-r px-0">
+            <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Share on Twitter">
+              <span class="active">
+                Tweet
+              </span>
+              <span>
+                <i class="fab fa-twitter"></i>
+              </span>
+            </a>
+            <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook">
+              <span class="active">
+                Share
+              </span>
+              <span>
+                <i class="fab fa-facebook-f"></i>
+              </span>
+            </a>
+          </div>
         </div>
       </div>
     {% endfor %}
