--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -130,7 +130,7 @@
             No description
           {% endif %}
         </p>
-        <div class="dope-buttons dope-buttons-r">
+        <div class="dope-buttons dope-buttons-l px-0">
           <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.object.url_format_title }}&url={{ podcast.object.get_absolute_url }}" title="Share on Twitter">
             <span class="active">
               Tweet
