--- a/podcasts/templates/playlist.html
+++ b/podcasts/templates/playlist.html
@@ -208,7 +208,7 @@
               No description
             {% endif %}
           </p>
-          <div class="dope-buttons dope-buttons-r px-0">
+          <div class="dope-buttons dope-buttons-l px-0">
             <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Share on Twitter">
               <span class="active">
                 Tweet
