--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -150,7 +150,7 @@
                 No description
               {% endif %}
             </p>
-            <div class="dope-buttons dope-buttons-r">
+            <div class="dope-buttons dope-buttons-r px-0">
               <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_title }}&url={{ podcast.get_absolute_url }}" title="Share on Twitter">
                 <span class="active">
                   Tweet
