--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -131,7 +131,7 @@
           {% endif %}
         </p>
         <div class="dope-buttons dope-buttons-l px-0">
-          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.object.url_format_title }}&url={{ podcast.object.get_absolute_url }}" title="Share on Twitter">
+          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.object.url_format_title }}&url={{ podcast.object.get_absolute_url }}" title="Tweet on Twitter">
             <span class="active">
               Tweet
             </span>
@@ -147,7 +147,16 @@
               <i class="fab fa-facebook-f"></i>
             </span>
           </a>
-        </div>        
+          <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+            <span class="active">
+              Copy Link
+            </span>
+            <span>
+              <i class="fas fa-copy"></i>
+            </span>
+            <input class="link-to-copy" value="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}"><input>
+          </a>
+        </div>
       </div>
     </div>
   {% endfor %}
