--- a/podcasts/templates/episodes-table.html
+++ b/podcasts/templates/episodes-table.html
@@ -73,7 +73,7 @@
                   {% endif %}
                 </p>
                 <div class="dope-buttons dope-buttons-r px-0">
-                  <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast_url }}?episode={{ episode.signature }}" title="Share on Twitter">
+                  <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast_url }}?episode={{ episode.signature }}" title="Tweet on Twitter">
                     <span class="active">
                       Tweet
                     </span>
@@ -89,6 +89,14 @@
                       <i class="fab fa-facebook-f"></i>
                     </span>
                   </a>
+                  <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+                    <span class="active">
+                      Copy Link
+                    </span>
+                    <span>
+                      <i class="fas fa-copy"></i>
+                    </span>
+                  </a>                  
                   {% if user.is_authenticated and results.view == "showpod" %}       
                   <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                     {% csrf_token %}
