--- a/podcasts/templates/previous.html
+++ b/podcasts/templates/previous.html
@@ -181,7 +181,7 @@
           {% endif %}
         </p>
         <div class="dope-buttons dope-buttons-r px-0">
-          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Share on Twitter">
+          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Tweet on Twitter">
             <span class="active">
               Tweet
             </span>
@@ -197,7 +197,15 @@
               <i class="fab fa-facebook-f"></i>
             </span>
           </a>
-        </div>        
+          <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+            <span class="active">
+              Copy Link
+            </span>
+            <span>
+              <i class="fas fa-copy"></i>
+            </span>
+          </a>          
+        </div>
       </div>
     </div>
   {% endfor %}
