--- a/index/templates/autocomplete.html
+++ b/index/templates/autocomplete.html
@@ -13,9 +13,11 @@
       </h2>      
     </a>
   {% empty %}
-    <p>
-      No results
-    </p>
+    <span>
+      <p>
+        No results
+      </p>
+    </span>
     <a class="browse-link clearfix" href="{% url 'search' %}">
       <p>
         Show all
