--- a/index/templates/play.html
+++ b/index/templates/play.html
@@ -251,6 +251,7 @@
               <span>
                 <i class="fas fa-copy"></i>
               </span>
+              <input class="link-to-copy d-none" value="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" />
             </a>
           </div>
         </div>
