--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -100,8 +100,11 @@
             <i class="fas fa-volume-mute"></i>
           </span>
         </button>          
-      </div>      
+      </div>
       <div class="collapse fade player-collapse" id="player-collapse">
+        <p>
+          Description:
+        </p>
         <p class="player-description">
           {% if episode.description %}
             {{ episode.description }}
@@ -109,6 +112,27 @@
             No description
           {% endif %}        
         </p>
+        <div class="dope-buttons dope-buttons-l px-0">
+          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Tweet on Twitter">
+            <span>Tweet</span>
+            <span>
+              <i class="fab fa-twitter"></i>
+            </span>
+          </a>
+          <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook">
+            <span>Share</span>
+            <span>
+              <i class="fab fa-facebook-f"></i>
+            </span>
+          </a>
+          <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+            <span>Copy Link</span>
+            <span>
+              <i class="fas fa-copy"></i>
+            </span>
+            <input class="link-to-copy d-none" value="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" />
+          </a>            
+        </div>        
       </div>
       <button class="btn-dope float-right" data-toggle="collapse" data-target="#player-collapse" aria-expanded="false" title="Show More">
         <span class="exp-icon exp-nix">
