--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -147,14 +147,14 @@
               <i class="fab fa-facebook-f"></i>
             </span>
           </a>
-          <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+          <a class="btn-dope copy-link" href="{{ podcast.object.get_absolute_url }}" title="Copy Link">
             <span class="active">
               Copy Link
             </span>
             <span>
               <i class="fas fa-copy"></i>
             </span>
-            <input class="link-to-copy" value="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}"><input>
+            <input class="link-to-copy d-none" value="{{ podcast.object.get_absolute_url }}" />
           </a>
         </div>
       </div>
