--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -167,13 +167,14 @@
                   <i class="fab fa-facebook-f"></i>
                 </span>
               </a>
-              <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+              <a class="btn-dope copy-link" href="{{ podcast.get_absolute_url }}" title="Copy Link">
                 <span class="active">
                   Copy Link
                 </span>
                 <span>
                   <i class="fas fa-copy"></i>
                 </span>
+                <input class="link-to-copy d-none" value="{{ podcast.get_absolute_url }}" />
               </a>              
             </div>
           </div>
