--- a/index/static/style.css
+++ b/index/static/style.css
@@ -195,6 +195,16 @@ form {
     opacity: 1;
   }
 }
+.link-to-copy {
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 999;
+  cursor: pointer;
+}
 
 /* BOOTSTRAP COLLAPSE */
 .collapsing {
