--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -154,7 +154,7 @@
             <span>
               <i class="fas fa-copy"></i>
             </span>
-            <input class="link-to-copy d-none" value="{{ podcast.object.get_absolute_url }}" />
+            <input class="link-to-copy" value="{{ podcast.object.get_absolute_url }}" />
           </a>
         </div>
       </div>
