--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -106,7 +106,7 @@
             <span>
               <i class="fas fa-copy"></i>
             </span>
-            <input class="link-to-copy d-none" value="{{ podcast.get_absolute_url }}" />
+            <input class="link-to-copy" value="{{ podcast.get_absolute_url }}" />
           </a>          
         </div>
       </div>
