--- a/index/static/style.css
+++ b/index/static/style.css
@@ -77,6 +77,7 @@ form {
   white-space: nowrap;
   display: inline-flex;
   transition: all .25s ease;
+  overflow: hidden;
 }
 .active {
   color: #fff;
