--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -25,26 +25,26 @@
       </ul>
       <ul>
         <li>
-          <a class="dope-link" href="//twitter.com/_dopepod_" title="Twitter">
+          <a class="dope-link" href="//twitter.com/_dopepod_" title="Tweet on Twitter" target="_blank">
             Tweet
             <i class="fab fa-twitter fa-lg"></i>
           </a>
         </li>
         <li>
-          <a class="dope-link" href="//www.facebook.com/dopepod.me" title="Facebook">
+          <a class="dope-link" href="//www.facebook.com/dopepod.me" title="Like on Facebook" target="_blank">
             Like
             <i class="fab fa-facebook-f fa-lg"></i>
           </a>
         </li>        
         <li>
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
             <input type="hidden" name="cmd" value="_donations">
             <input type="hidden" name="business" value="cyanidesayonara@gmail.com">
             <input type="hidden" name="lc" value="US">
             <input type="hidden" name="item_name" value="dopepod">
             <input type="hidden" name="no_note" value="0">
             <input type="hidden" name="currency_code" value="USD">
-            <button class="dope-link" type="submit">
+            <button class="dope-link" type="submit" title="Donate on Paypal">
               Donate
               <i class="fab fa-paypal fa-lg"></i>
             </button>
