--- a/index/templates/play.html
+++ b/index/templates/play.html
@@ -228,7 +228,7 @@
             {% if episode.description %} {{ episode.description }} {% else %} No description {% endif %}
           </p>
           <div class="dope-buttons px-0">
-            <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Tweet on Twitter">
+            <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Tweet on Twitter" target="_blank">
               <span class="active">
                 Tweet
               </span>
@@ -236,7 +236,7 @@
                 <i class="fab fa-twitter"></i>
               </span>
             </a>
-            <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook">
+            <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook" target="_blank">
               <span class="active">
                 Share
               </span>
@@ -244,7 +244,7 @@
                 <i class="fab fa-facebook-f"></i>
               </span>
             </a>
-            <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+            <button class="btn-dope copy-link" title="Copy Link">
               <span class="active">
                 Copy Link
               </span>
@@ -252,7 +252,7 @@
                 <i class="fas fa-copy"></i>
               </span>
               <input class="link-to-copy" value="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" />
-            </a>
+            </button>
           </div>
         </div>
       </div>
