--- a/podcasts/templates/episodes-table.html
+++ b/podcasts/templates/episodes-table.html
@@ -73,7 +73,7 @@
                   {% endif %}
                 </p>
                 <div class="dope-buttons dope-buttons-r px-0">
-                  <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast_url }}?episode={{ episode.signature }}" title="Tweet on Twitter">
+                  <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast_url }}?episode={{ episode.signature }}" title="Tweet on Twitter" target="_blank">
                     <span class="active">
                       Tweet
                     </span>
@@ -81,7 +81,7 @@
                       <i class="fab fa-twitter"></i>
                     </span>
                   </a>
-                  <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook">
+                  <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook" target="_blank">
                     <span class="active">
                       Share
                     </span>
@@ -89,7 +89,7 @@
                       <i class="fab fa-facebook-f"></i>
                     </span>
                   </a>
-                  <a class="btn-dope copy-link" href="{{ episode.podcast_url }}?episode={{ episode.signature }}" title="Copy Link">
+                  <button class="btn-dope copy-link" title="Copy Link">
                     <span class="active">
                       Copy Link
                     </span>
@@ -97,7 +97,7 @@
                       <i class="fas fa-copy"></i>
                     </span>
                     <input class="link-to-copy" value="{{ episode.podcast_url }}?episode={{ episode.signature }}" />
-                  </a>                  
+                  </button>
                   {% if user.is_authenticated and results.view == "showpod" %}       
                   <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                     {% csrf_token %}
