--- a/podcasts/templates/playlist.html
+++ b/podcasts/templates/playlist.html
@@ -209,7 +209,7 @@
             {% endif %}
           </p>
           <div class="dope-buttons dope-buttons-l px-0">
-            <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Tweet on Twitter">
+            <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ episode.url_format_title }}&url={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Tweet on Twitter" target="_blank">
               <span class="active">
                 Tweet
               </span>
@@ -217,7 +217,7 @@
                 <i class="fab fa-twitter"></i>
               </span>
             </a>
-            <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook">
+            <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}&quote={{ episode.url_format_title }}" title="Share on Facebook" target="_blank">
               <span class="active">
                 Share
               </span>
@@ -225,7 +225,7 @@
                 <i class="fab fa-facebook-f"></i>
               </span>
             </a>
-            <a class="btn-dope copy-link" href="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" title="Copy Link">
+            <button class="btn-dope copy-link" title="Copy Link">
               <span class="active">
                 Copy Link
               </span>
@@ -233,7 +233,7 @@
                 <i class="fas fa-copy"></i>
               </span>
               <input class="link-to-copy" value="{{ episode.podcast.get_absolute_url }}?episode={{ episode.signature }}" />
-            </a>            
+            </button>
           </div>
         </div>
       </div>
