--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -151,7 +151,7 @@
               {% endif %}
             </p>
             <div class="dope-buttons dope-buttons-r px-0">
-              <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_title }}&url={{ podcast.get_absolute_url }}" title="Tweet on Twitter">
+              <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_title }}&url={{ podcast.get_absolute_url }}" title="Tweet on Twitter" target="_blank">
                 <span class="active">
                   Tweet
                 </span>
@@ -159,7 +159,7 @@
                   <i class="fab fa-twitter"></i>
                 </span>
               </a>
-              <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}" title="Share on Facebook">
+              <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}" title="Share on Facebook" target="_blank">
                 <span class="active">
                   Share
                 </span>
@@ -167,7 +167,7 @@
                   <i class="fab fa-facebook-f"></i>
                 </span>
               </a>
-              <a class="btn-dope copy-link" href="{{ podcast.get_absolute_url }}" title="Copy Link">
+              <button class="btn-dope copy-link" title="Copy Link">
                 <span class="active">
                   Copy Link
                 </span>
@@ -175,7 +175,7 @@
                   <i class="fas fa-copy"></i>
                 </span>
                 <input class="link-to-copy" value="{{ podcast.get_absolute_url }}" />
-              </a>              
+              </button>
             </div>
           </div>
         </div>
